// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders default styling 1`] = `
<header
  className="c-chrome__body__header "
  data-garden-id="chrome.header"
  data-garden-version="version"
/>
`;

exports[`Header renders standalone styling if provided 1`] = `
<header
  className="c-chrome__body__header c-chrome__body__header--standalone "
  data-garden-id="chrome.header"
  data-garden-version="version"
/>
`;
